corrrection du fchier pom et ressources