@@ -1,32 +1,38 @@
 package com.example.schoolgestapp.gestions_users.controller;
 
+import com.example.schoolgestapp.common.dto.PagedResponse;
 import com.example.schoolgestapp.entity.User;
-import com.example.schoolgestapp.entity.Teacher;
 import com.example.schoolgestapp.entity.enums.Role;
 import com.example.schoolgestapp.gestions_users.dto.BatchStatusUpdateRequest;
 import com.example.schoolgestapp.gestions_users.dto.TeacherDTO;
 import com.example.schoolgestapp.gestions_users.dto.UserResponseDTO;
+import com.example.schoolgestapp.gestions_users.mapper.TeacherMapper;
 import com.example.schoolgestapp.gestions_users.services.UserService;
 import com.example.schoolgestapp.repository.ITeacher;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/users")
-@Tag(name = "03. Utilisateurs & Administration", description = "Gestion globale des comptes, des rôles et des statuts (Admin uniquement)")
+@Tag(name = "03. Utilisateurs & Administration", description = "Gestion globale des comptes, des roles et des statuts (Admin uniquement)")
 public class UserControleur {
 
     private final UserService userService;
     private final ITeacher teacherRepository;
+    private final TeacherMapper teacherMapper;
 
-    public UserControleur(UserService userService, ITeacher teacherRepository) {
+    public UserControleur(UserService userService, ITeacher teacherRepository, TeacherMapper teacherMapper) {
         this.userService = userService;
         this.teacherRepository = teacherRepository;
+        this.teacherMapper = teacherMapper;
     }
 
     // --- Recherche & Filtrage ---
@@ -38,12 +44,37 @@ public class UserControleur {
         return ResponseEntity.ok(userService.searchUsers(query, role, active));
     }
 
+    @GetMapping("/paged")
+    public ResponseEntity<PagedResponse<UserResponseDTO>> searchUsersPaged(
+            @RequestParam(required = false) String query,
+            @RequestParam(required = false) String role,
+            @RequestParam(required = false) Boolean active,
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "20") int size,
+            @RequestParam(defaultValue = "id") String sortBy,
+            @RequestParam(defaultValue = "desc") String direction) {
+        Pageable pageable = buildPageable(page, size, sortBy, direction);
+        Page<UserResponseDTO> result = userService.searchUsersPaged(query, role, active, pageable);
+        return ResponseEntity.ok(PagedResponse.from(result));
+    }
+
     @GetMapping("/teachers")
     public ResponseEntity<List<TeacherDTO>> getTeachers() {
         List<TeacherDTO> teachers = teacherRepository.findAll().stream()
-                .map(this::toTeacherDTO)
-                .collect(Collectors.toList());
+                .map(teacherMapper::toDto)
+                .toList();
         return ResponseEntity.ok(teachers);
+    }
+
+    @GetMapping("/teachers/paged")
+    public ResponseEntity<PagedResponse<TeacherDTO>> getTeachersPaged(
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "20") int size,
+            @RequestParam(defaultValue = "id") String sortBy,
+            @RequestParam(defaultValue = "desc") String direction) {
+        Pageable pageable = buildPageable(page, size, sortBy, direction);
+        Page<TeacherDTO> result = teacherRepository.findAll(pageable).map(teacherMapper::toDto);
+        return ResponseEntity.ok(PagedResponse.from(result));
     }
 
     @GetMapping("/{id}")
@@ -95,19 +126,11 @@ public class UserControleur {
         return ResponseEntity.noContent().build();
     }
 
-    private TeacherDTO toTeacherDTO(Teacher t) {
-        if (t == null) return null;
-        return TeacherDTO.builder()
-                .id(t.getId())
-                .userId(t.getUser() != null ? t.getUser().getId() : null)
-                .name(t.getUser() != null ? t.getUser().getFirstName() + " " + t.getUser().getLastName() : null)
-                .email(t.getUser() != null ? t.getUser().getEmail() : null)
-                .phone(t.getUser() != null ? t.getUser().getPhone() : null)
-                .specialties(t.getSpecialties())
-                .office(t.getOffice())
-                .departmentName(t.getDepartment() != null ? t.getDepartment().getName() : null)
-                .cvUrl(t.getCvUrl())
-                .hireDate(t.getHireDate())
-                .build();
+    private Pageable buildPageable(int page, int size, String sortBy, String direction) {
+        int safeSize = Math.min(Math.max(size, 1), 100);
+        Sort sort = "asc".equalsIgnoreCase(direction)
+                ? Sort.by(sortBy).ascending()
+                : Sort.by(sortBy).descending();
+        return PageRequest.of(Math.max(page, 0), safeSize, sort);
     }
 }
